# debug_calls

./: .pylintrc  LICENSE  MANIFEST.in  mypy.ini  setup.cfg
.github/workflows/: mypy.yml  pylint.yml  python-publish.yml
debug_calls/: __init__.py  decorators.py
