[metadata]
name = debug_calls
version = 0.1.0
author = Luis Morera De La Cruz
author_email = capruce@gmail.com
description = A decorator for logging calls to functions and their given arguments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/capruce/debug_calls
project_urls =
    Source = https://github.com/capruce/debug_calls
    Bug Tracker = https://github.com/capruce/debug_calls/issues
classifiers =
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
python_requires = >=3.7
packages = debug_calls
include_package_data = True

